changed converter script

--- a/1.TMVA/1.TMVA_BDT.ipynb
+++ b/1.TMVA/1.TMVA_BDT.ipynb
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "data = TFile.Open('higgs_small.root')\n",
+    "data = TFile.Open('../data/higgs_small.root')\n",
     "signal = data.Get('TreeS')\n",
     "background = data.Get('TreeB')\n",
     "\n",
@@ -107,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "<ROOT.TMVA::MethodBDT object (\"BDT\") at 0x55d5ac9c5f50>"
+       "<ROOT.TMVA::MethodBDT object (\"BDT\") at 0x55c5950983e0>"
       ]
      },
      "execution_count": 4,
@@ -332,7 +332,7 @@
     "                   '!H:!V:Fisher:VarTransform=G,D')\n",
     "\n",
     "factory.BookMethod(dataloader, TMVA.Types.kBDT, 'BDT',\n",
-    "                   '!H:!V:VarTransform=G,D:NTrees=600:MaxDepth=5')"
+    "                   '!H:!V:VarTransform=G,D:NTrees=800:MaxDepth=3:nCuts=20')"
    ]
   },
   {
@@ -525,9 +525,9 @@
       "                         :                   m_wwbb:                   -0.108\n",
       "                         :                 (offset):                   +0.038\n",
       "                         : ---------------------------------------------------\n",
-      "                         : Elapsed time for training with 6000 events: 0.33 sec         \n",
+      "                         : Elapsed time for training with 6000 events: 0.485 sec         \n",
       "Fisher                   : [dataset] : Evaluation of Fisher on training sample (6000 events)\n",
-      "                         : Elapsed time for evaluation of 6000 events: 0.175 sec       \n",
+      "                         : Elapsed time for evaluation of 6000 events: 0.274 sec       \n",
       "                         : Creating xml weight file: \u001b[0;36mdataset/weights/TMVAClassification_Fisher.weights.xml\u001b[0m\n",
       "                         : Creating standalone class: \u001b[0;36mdataset/weights/TMVAClassification_Fisher.class.C\u001b[0m\n",
       "Factory                  : Training finished\n",
@@ -569,10 +569,10 @@
       "                         : -------------------------------------------------------------------------------------------------------------------------------------------\n",
       "BDT                      : #events: (reweighted) sig: 3000 bkg: 3000\n",
       "                         : #events: (unweighted) sig: 3000 bkg: 3000\n",
-      "                         : Training 600 Decision Trees ... patience please\n",
-      "                         : Elapsed time for training with 6000 events: 5.74 sec         \n",
+      "                         : Training 800 Decision Trees ... patience please\n",
+      "                         : Elapsed time for training with 6000 events: 7.85 sec         \n",
       "BDT                      : [dataset] : Evaluation of BDT on training sample (6000 events)\n",
-      "                         : Elapsed time for evaluation of 6000 events: 0.896 sec       \n",
+      "                         : Elapsed time for evaluation of 6000 events: 1.18 sec       \n",
       "                         : Creating xml weight file: \u001b[0;36mdataset/weights/TMVAClassification_BDT.weights.xml\u001b[0m\n",
       "                         : Creating standalone class: \u001b[0;36mdataset/weights/TMVAClassification_BDT.class.C\u001b[0m\n",
       "Factory                  : Training finished\n",
@@ -615,34 +615,34 @@
       "                         : ----------------------------------------------------------\n",
       "                         : Rank : Variable                 : Variable Importance\n",
       "                         : ----------------------------------------------------------\n",
-      "                         :    1 : m_bb                     : 4.807e-02\n",
-      "                         :    2 : m_wwbb                   : 4.246e-02\n",
-      "                         :    3 : m_jjj                    : 4.189e-02\n",
-      "                         :    4 : lepton_pT                : 3.940e-02\n",
-      "                         :    5 : m_wbb                    : 3.862e-02\n",
-      "                         :    6 : m_jlv                    : 3.844e-02\n",
-      "                         :    7 : jet_2_pt                 : 3.811e-02\n",
-      "                         :    8 : missing_energy_magnitude : 3.778e-02\n",
-      "                         :    9 : m_jj                     : 3.694e-02\n",
-      "                         :   10 : jet_1_pt                 : 3.688e-02\n",
-      "                         :   11 : lepton_eta               : 3.614e-02\n",
-      "                         :   12 : jet_1_phi                : 3.577e-02\n",
-      "                         :   13 : jet_1_eta                : 3.564e-02\n",
-      "                         :   14 : jet_3_phi                : 3.561e-02\n",
-      "                         :   15 : jet_3_pt                 : 3.548e-02\n",
-      "                         :   16 : lepton_phi               : 3.540e-02\n",
-      "                         :   17 : jet_1_b_tag              : 3.480e-02\n",
-      "                         :   18 : jet_4_pt                 : 3.479e-02\n",
-      "                         :   19 : jet_2_eta                : 3.442e-02\n",
-      "                         :   20 : jet_4_eta                : 3.374e-02\n",
-      "                         :   21 : jet_4_phi                : 3.363e-02\n",
-      "                         :   22 : m_lv                     : 3.360e-02\n",
-      "                         :   23 : jet_3_eta                : 3.342e-02\n",
-      "                         :   24 : missing_energy_phi       : 3.212e-02\n",
-      "                         :   25 : jet_2_b_tag              : 3.200e-02\n",
-      "                         :   26 : jet_2_phi                : 3.199e-02\n",
-      "                         :   27 : jet_3_b_tag              : 2.762e-02\n",
-      "                         :   28 : jet_4_b_tag              : 2.524e-02\n",
+      "                         :    1 : m_wwbb                   : 4.687e-02\n",
+      "                         :    2 : m_bb                     : 4.638e-02\n",
+      "                         :    3 : lepton_pT                : 4.578e-02\n",
+      "                         :    4 : m_jlv                    : 4.266e-02\n",
+      "                         :    5 : m_jjj                    : 4.060e-02\n",
+      "                         :    6 : jet_2_pt                 : 4.031e-02\n",
+      "                         :    7 : m_jj                     : 3.869e-02\n",
+      "                         :    8 : jet_1_pt                 : 3.847e-02\n",
+      "                         :    9 : missing_energy_magnitude : 3.711e-02\n",
+      "                         :   10 : jet_4_pt                 : 3.574e-02\n",
+      "                         :   11 : jet_1_b_tag              : 3.572e-02\n",
+      "                         :   12 : jet_3_phi                : 3.546e-02\n",
+      "                         :   13 : m_wbb                    : 3.531e-02\n",
+      "                         :   14 : lepton_eta               : 3.513e-02\n",
+      "                         :   15 : jet_1_eta                : 3.500e-02\n",
+      "                         :   16 : missing_energy_phi       : 3.453e-02\n",
+      "                         :   17 : jet_2_phi                : 3.397e-02\n",
+      "                         :   18 : jet_3_pt                 : 3.337e-02\n",
+      "                         :   19 : m_lv                     : 3.261e-02\n",
+      "                         :   20 : lepton_phi               : 3.241e-02\n",
+      "                         :   21 : jet_4_eta                : 3.236e-02\n",
+      "                         :   22 : jet_2_b_tag              : 3.228e-02\n",
+      "                         :   23 : jet_1_phi                : 3.147e-02\n",
+      "                         :   24 : jet_3_eta                : 3.119e-02\n",
+      "                         :   25 : jet_4_phi                : 3.093e-02\n",
+      "                         :   26 : jet_2_eta                : 3.021e-02\n",
+      "                         :   27 : jet_3_b_tag              : 2.776e-02\n",
+      "                         :   28 : jet_4_b_tag              : 2.767e-02\n",
       "                         : ----------------------------------------------------------\n",
       "Factory                  : === Destroy and recreate all methods via weight files for testing ===\n",
       "                         : \n",
@@ -650,11 +650,11 @@
       "Factory                  : Test method: Fisher for Classification performance\n",
       "                         : \n",
       "Fisher                   : [dataset] : Evaluation of Fisher on testing sample (3999 events)\n",
-      "                         : Elapsed time for evaluation of 3999 events: 0.0787 sec       \n",
+      "                         : Elapsed time for evaluation of 3999 events: 0.113 sec       \n",
       "Factory                  : Test method: BDT for Classification performance\n",
       "                         : \n",
       "BDT                      : [dataset] : Evaluation of BDT on testing sample (3999 events)\n",
-      "                         : Elapsed time for evaluation of 3999 events: 0.343 sec       \n",
+      "                         : Elapsed time for evaluation of 3999 events: 0.563 sec       \n",
       "Factory                  : \u001b[1mEvaluate all methods\u001b[0m\n",
       "Factory                  : Evaluate classifier: Fisher\n",
       "                         : \n",
@@ -815,7 +815,7 @@
       "                         : -------------------------------------------------------------------------------------------------------------------\n",
       "                         : DataSet       MVA                       \n",
       "                         : Name:         Method:          ROC-integ\n",
-      "                         : dataset       BDT            : 0.730\n",
+      "                         : dataset       BDT            : 0.736\n",
       "                         : dataset       Fisher         : 0.653\n",
       "                         : -------------------------------------------------------------------------------------------------------------------\n",
       "                         : \n",
@@ -824,7 +824,7 @@
       "                         : DataSet              MVA              Signal efficiency: from test sample (from training sample) \n",
       "                         : Name:                Method:          @B=0.01             @B=0.10            @B=0.30   \n",
       "                         : -------------------------------------------------------------------------------------------------------------------\n",
-      "                         : dataset              BDT            : 0.071 (0.690)       0.329 (0.793)      0.642 (0.871)\n",
+      "                         : dataset              BDT            : 0.055 (0.472)       0.331 (0.678)      0.646 (0.819)\n",
       "                         : dataset              Fisher         : 0.013 (0.018)       0.174 (0.215)      0.513 (0.559)\n",
       "                         : -------------------------------------------------------------------------------------------------------------------\n",
       "                         : \n",
@@ -857,24 +857,24 @@
       "88%, time left: 0 sec\n",
       "94%, time left: 0 sec\n",
       "0%, time left: unknown\n",
-      "6%, time left: 5 sec\n",
-      "12%, time left: 4 sec\n",
-      "19%, time left: 4 sec\n",
-      "25%, time left: 4 sec\n",
-      "31%, time left: 3 sec\n",
-      "37%, time left: 3 sec\n",
-      "44%, time left: 3 sec\n",
-      "50%, time left: 2 sec\n",
-      "56%, time left: 2 sec\n",
+      "6%, time left: 6 sec\n",
+      "12%, time left: 7 sec\n",
+      "18%, time left: 6 sec\n",
+      "25%, time left: 5 sec\n",
+      "31%, time left: 5 sec\n",
+      "37%, time left: 4 sec\n",
+      "43%, time left: 4 sec\n",
+      "50%, time left: 3 sec\n",
+      "56%, time left: 3 sec\n",
       "62%, time left: 2 sec\n",
-      "69%, time left: 1 sec\n",
+      "68%, time left: 2 sec\n",
       "75%, time left: 1 sec\n",
       "81%, time left: 1 sec\n",
       "87%, time left: 0 sec\n",
-      "94%, time left: 0 sec\n",
+      "93%, time left: 0 sec\n",
       "0%, time left: unknown\n",
       "7%, time left: 1 sec\n",
-      "13%, time left: 0 sec\n",
+      "13%, time left: 1 sec\n",
       "19%, time left: 0 sec\n",
       "25%, time left: 0 sec\n",
       "32%, time left: 0 sec\n",
