--- a/1.TMVA/1.TMVA_BDT.ipynb
+++ b/1.TMVA/1.TMVA_BDT.ipynb
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "<ROOT.TMVA::MethodBDT object (\"BDT\") at 0x555e3dd88640>"
+       "<ROOT.TMVA::MethodBDT object (\"BDT\") at 0x55e915713f40>"
       ]
      },
      "execution_count": 4,
@@ -528,7 +528,7 @@
       "                         :                   m_wwbb:                   -0.102\n",
       "                         :                 (offset):                   +0.040\n",
       "                         : ---------------------------------------------------\n",
-      "                         : Elapsed time for training with 5500 events: 0.257 sec         \n",
+      "                         : Elapsed time for training with 5500 events: 0.205 sec         \n",
       "Fisher                   : [dataset] : Evaluation of Fisher on training sample (5500 events)\n",
       "                         : Elapsed time for evaluation of 5500 events: 0.0865 sec       \n",
       "                         : Creating xml weight file: \u001b[0;36mdataset/weights/TMVAClassification_Fisher.weights.xml\u001b[0m\n",
@@ -573,9 +573,9 @@
       "BDT                      : #events: (reweighted) sig: 2750 bkg: 2750\n",
       "                         : #events: (unweighted) sig: 3000 bkg: 2500\n",
       "                         : Training 800 Decision Trees ... patience please\n",
-      "                         : Elapsed time for training with 5500 events: 5.24 sec         \n",
+      "                         : Elapsed time for training with 5500 events: 5.69 sec         \n",
       "BDT                      : [dataset] : Evaluation of BDT on training sample (5500 events)\n",
-      "                         : Elapsed time for evaluation of 5500 events: 0.68 sec       \n",
+      "                         : Elapsed time for evaluation of 5500 events: 0.761 sec       \n",
       "                         : Creating xml weight file: \u001b[0;36mdataset/weights/TMVAClassification_BDT.weights.xml\u001b[0m\n",
       "                         : Creating standalone class: \u001b[0;36mdataset/weights/TMVAClassification_BDT.class.C\u001b[0m\n",
       "                         : TMVA.root:/dataset/Method_BDT/BDT\n",
@@ -656,11 +656,11 @@
       "Factory                  : Test method: Fisher for Classification performance\n",
       "                         : \n",
       "Fisher                   : [dataset] : Evaluation of Fisher on testing sample (4499 events)\n",
-      "                         : Elapsed time for evaluation of 4499 events: 0.07 sec       \n",
+      "                         : Elapsed time for evaluation of 4499 events: 0.0731 sec       \n",
       "Factory                  : Test method: BDT for Classification performance\n",
       "                         : \n",
       "BDT                      : [dataset] : Evaluation of BDT on testing sample (4499 events)\n",
-      "                         : Elapsed time for evaluation of 4499 events: 0.402 sec       \n",
+      "                         : Elapsed time for evaluation of 4499 events: 0.474 sec       \n",
       "Factory                  : \u001b[1mEvaluate all methods\u001b[0m\n",
       "Factory                  : Evaluate classifier: Fisher\n",
       "                         : \n",
@@ -864,11 +864,11 @@
       "94%, time left: 0 sec\n",
       "0%, time left: unknown\n",
       "6%, time left: 4 sec\n",
-      "12%, time left: 3 sec\n",
+      "12%, time left: 4 sec\n",
       "18%, time left: 3 sec\n",
       "25%, time left: 3 sec\n",
       "31%, time left: 3 sec\n",
-      "37%, time left: 2 sec\n",
+      "37%, time left: 3 sec\n",
       "43%, time left: 2 sec\n",
       "50%, time left: 2 sec\n",
       "56%, time left: 2 sec\n",
